--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'maven-publish'
 
 group 'com.github.MeiNanziiii'
-version 'v0.55'
+version '0.55.1'
 
 sourceSets {
     main {
